linuxmuster-webui7 (1.0.72-1) lmn7; urgency=medium 

  * Current snapshot build 040dfbb9eb6974345d22b81210bd00612c070abb
   *     added minor fixes to layout

 -- Andreas Till <andreas.till@netzint.de> Thu Jun 13 18:41:05 UTC 2019

linuxmuster-webui7 (1.0.71-1) lmn7; urgency=medium 

  * Current snapshot build 60c4d4d6c700134cb6791c286b2ac21c787dac3d
   *     updated frontend look

 -- Andreas Till <andreas.till@netzint.de> Thu Jun 13 15:37:00 UTC 2019

linuxmuster-webui7 (1.0.70-1) lmn7; urgency=medium 

  * Current snapshot build 028bd1d1385528927e5efbab46495d978b9ec1d2
   *     Added custom csv list support

 -- Andreas Till <andreas.till@netzint.de> Wed May 29 16:05:57 UTC 2019

linuxmuster-webui7 (1.0.69-1) lmn7; urgency=medium 

  * Current snapshot build 318cea2e21ff71233e71b2e362263dde5c5ddaa0
   *     Added no students in printer module

 -- Andreas Till <andreas.till@netzint.de> Fri May 24 11:47:57 UTC 2019

linuxmuster-webui7 (1.0.68-1) lmn7; urgency=medium 

  * Current snapshot build 77da5f0b63537560f3fa68a23009e463862adbf7
   *     removed comments

 -- Andreas Till <andreas.till@netzint.de> Fri May 24 10:05:12 UTC 2019

linuxmuster-webui7 (1.0.67-1) lmn7; urgency=medium 

  * Current snapshot build 701d8e957a069bff7d22ef067ddbddf7919b394b
   *     improved error handling on bad encoding

 -- Andreas Till <andreas.till@netzint.de> Thu May 23 14:21:00 UTC 2019

linuxmuster-webui7 (1.0.66-1) lmn7; urgency=medium 

  * Current snapshot build 701d8e957a069bff7d22ef067ddbddf7919b394b
   *     improved error handling on bad encoding

 -- Andreas Till <andreas.till@netzint.de> Thu May 23 14:19:14 UTC 2019

linuxmuster-webui7 (1.0.65-1) lmn7; urgency=medium 

  * Current snapshot build 
   * 

 -- Andreas Till <andreas.till@netzint.de> Fri May 17 15:10:38 UTC 2019

linuxmuster-webui7 (1.0.64-1) lmn7; urgency=medium 

  * Current snapshot build d57ed5da0633680a1519689216e44122673dbadd

 -- Andreas Till <andreas.till@netzint.de> Wed Mai 8 12:29:33 UTC 2019
