@@ -166,7 +166,7 @@ html body.customized .container > .sidebar .sidebar-item h5 {
 p.dotlist:before {
   content: '';
   position: absolute;
-  bottom: 0.4rem;
+  bottom: .4rem;
   width: 100%;
   height: 0;
   line-height: 0;
