@@ -1,4 +1,4 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common', ['core', 'ajenti.ace', 'ajenti.filesystem']);
 
@@ -29,7 +29,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common').directive('lmLog', function($http, $interval, $timeout) {
     return {
@@ -77,7 +77,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common').directive('lmDragUpload', function($http, notify, messagebox, filesystem, gettext) {
     return {
@@ -230,7 +230,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common').service('lmFileEditor', function($uibModal) {
     this.show = function(path, encoding) {
@@ -303,7 +303,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.common').service('lmFileBackups', function($uibModal) {
     this.show = function(path, encoding) {
