@@ -1,10 +1,10 @@
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users', ['core', 'lm.common']);
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/students-list', {
@@ -191,7 +191,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/teachers', {
@@ -412,7 +412,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/students', {
@@ -632,7 +632,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/schooladmins', {
@@ -880,7 +880,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/globaladmins', {
@@ -1128,7 +1128,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/teachers-list', {
@@ -1322,7 +1322,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/extra-students', {
@@ -1464,7 +1464,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/extra-courses', {
@@ -1627,7 +1627,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/teachers', {
@@ -1848,7 +1848,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').config(function($routeProvider) {
     return $routeProvider.when('/view/lm/users/print-passwords', {
@@ -1913,7 +1913,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   angular.module('lm.users').controller('LMUsersCheckResultsModalController', function($scope, $uibModalInstance, $uibModal, data) {
     $scope.data = data;
@@ -2018,7 +2018,7 @@
 
 }).call(this);
 
-// Generated by CoffeeScript 2.3.2
+// Generated by CoffeeScript 2.3.1
 (function() {
   var isStrongPwd1;
 
